<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Created by muham on 12/09/2021, 12:20 PM
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 12/09/2021, 12:20 PM
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>
    <string name="app_name" translatable="false">Github User</string>
    <string name="followers">Pengikut</string>
    <string name="following">Mengikuti</string>
    <string name="repository">Repositori</string>
    <string name="no_data_available">Tidak ada data tersedia</string>
    <string name="share">Bagikan</string>
    <string name="search">Cari</string>
    <string name="settings">Pengaturan</string>
    <string name="search_hint">Masukkan nama pengguna</string>
    <string name="username_tag">\@%s</string>
    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
    <string name="invalid_username_query">Nama pengguna tidak valid</string>
    <string name="user_found">%d Pengguna Ditemukan</string>
    <string name="http_error_title">Gagal memuat data</string>
    <string name="neutral_button_text">Oke</string>
    <string name="info_title">Pemberitahuan</string>
    <string name="error_code">Kesalahan : %s</string>
    <string name="github_logo" translatable="false">Github Icon</string>
    <string name="delete_all">Hapus Semua</string>
    <string name="background">Latar Belakang</string>
    <string name="added_to_favorite">Ditambahkan ke favorit</string>
    <string name="removed_from_favorite">Dihapus dari favorit</string>
    <string name="favorite">Favorit</string>
    <string name="dark_mode">Tema Gelap</string>
    <string name="localization">Bahasa</string>
    <string name="dark_mode_subtitle">Aktifkan Tema Gelap</string>
    <string name="localization_summary">Pilih Bahasa</string>
    <string name="home_location">Home Location</string>
    <string name="office_location">Office Location</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="title_confitmation">Konfirmasi</string>
    <string name="message_confirmation">Apakah anda yakin ingin menghapus semua data?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
</resources>


